[gd_scene load_steps=56 format=2]

[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (45).png" type="Texture" id=1]
[ext_resource path="res://Scripts/bearWizard_enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (33).png" type="Texture" id=3]
[ext_resource path="res://Sounds/enemie_dead.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (5).png" type="Texture" id=5]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (10).png" type="Texture" id=6]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (37).png" type="Texture" id=7]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (14).png" type="Texture" id=8]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (8).png" type="Texture" id=9]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (11).png" type="Texture" id=10]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (34).png" type="Texture" id=11]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (4).png" type="Texture" id=12]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (12).png" type="Texture" id=13]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (13).png" type="Texture" id=14]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (43).png" type="Texture" id=15]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (48).png" type="Texture" id=16]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (6).png" type="Texture" id=17]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (36).png" type="Texture" id=18]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (9).png" type="Texture" id=19]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (38).png" type="Texture" id=20]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (44).png" type="Texture" id=21]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (7).png" type="Texture" id=22]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (35).png" type="Texture" id=23]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (47).png" type="Texture" id=24]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (31).png" type="Texture" id=25]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (32).png" type="Texture" id=26]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (3).png" type="Texture" id=27]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000.png" type="Texture" id=28]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (40).png" type="Texture" id=29]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (2).png" type="Texture" id=30]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (41).png" type="Texture" id=31]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (42).png" type="Texture" id=32]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (46).png" type="Texture" id=33]
[ext_resource path="res://Assets/FirePandaEnemie/28db3db0393c4eb321cc6a204d1a493d-0000 (39).png" type="Texture" id=34]
[ext_resource path="res://Assets/Enemies/fireball.png" type="Texture" id=35]
[ext_resource path="res://Sounds/fireballwas.ogg" type="AudioStream" id=36]
[ext_resource path="res://Sounds/fireball.ogg" type="AudioStream" id=37]
[ext_resource path="res://Assets/FirePandaEnemie/firePandaDEADsheet.png" type="Texture" id=38]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 35 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 35 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 35 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 35 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 5.35714, 3.21429 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 38 )
region = Rect2( 0, 450, 720, 322 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 38 )
region = Rect2( 720, 450, 720, 322 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 38 )
region = Rect2( 1440, 450, 720, 322 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 38 )
region = Rect2( 2160, 450, 720, 322 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 38 )
region = Rect2( 2880, 450, 720, 322 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "dead",
"speed": 15.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 9 ), ExtResource( 19 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 9 ), ExtResource( 19 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 23 ), ExtResource( 18 ), ExtResource( 7 ), ExtResource( 20 ), ExtResource( 34 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 1 ), ExtResource( 33 ), ExtResource( 24 ), ExtResource( 16 ), ExtResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 203.25, 272 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12.5, 8.75 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 8.5, 11 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 11, 9.5 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 13, 11 )

[node name="bearWizard" type="KinematicBody2D" groups=["enemie4"]]
collision_layer = 8
collision_mask = 8
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=["enemie4"]]
collision_layer = 8
collision_mask = 8

[node name="AnimatedSprite2" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( -24, 2 )
scale = Vector2( 1.4, 1.4 )
frames = SubResource( 12 )
frame = 3
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
light_mask = 4
position = Vector2( -25.5, 2.5 )
scale = Vector2( 1.4, 1.4 )
shape = SubResource( 13 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="KinematicBody2D"]
stream = ExtResource( 36 )
volume_db = 5.0
pitch_scale = 1.1
max_distance = 100.0
attenuation = 0.63728

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, -14 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 4 )
frame = 16
flip_h = true

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 236, 5 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4, 4 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="deadsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0
pitch_scale = 1.2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 37 )
volume_db = 5.0
pitch_scale = 1.1
max_distance = 420.0
attenuation = 0.63728

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -27, -14 )
shape = SubResource( 19 )
disabled = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
light_mask = 4
position = Vector2( -4, 3 )
shape = SubResource( 5 )

[node name="Area2D3" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( -4, 2 )
shape = SubResource( 20 )

[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_Area2D3_body_entered"]
